--- a/yt-clone/src/components/categoriesBar/_categoriesBar.scss
+++ b/yt-clone/src/components/categoriesBar/_categoriesBar.scss
@@ -1,15 +1,14 @@
 @import '../../base.scss';
 
 .categoriesBar {
-  
   padding: 0.5rem 0;
   font-size: 0.8rem;
-
+  
   display: flex;
   overflow-x: scroll;
 
   &::-webkit-scrollbar {
-    width: 0px;
+    width: 0px
   }
   scrollbar-width: none;
 
@@ -20,7 +19,7 @@
     white-space: nowrap;
     border: 1.5px solid $text-color;
     border-radius: 999px;
-
+    
     &:hover {
       background-color: #374a59;
     }
