--- a/yt-clone/src/components/sidebar/_sidebar.scss
+++ b/yt-clone/src/components/sidebar/_sidebar.scss
@@ -1,8 +1,8 @@
-@import '../../_base.scss';
+@import '../../base.scss';
 
 .sidebar {
   background: $black-secondary;
-  
+
   display: flex;
   flex-direction: column;
 
@@ -22,7 +22,7 @@
     padding: 0.6rem 1.5rem;
     margin: 0.2rem 0;
     cursor: pointer;
-    
+
     span {
       margin-left: 1rem;
       font-size: 14px;
@@ -45,6 +45,7 @@
 }
 
 @media (max-width: $breakpoint-medium) {
+  
   .sidebar {
     width: 90px;
     li {
@@ -58,7 +59,8 @@
 
 @media (max-width: $breakpoint-small) {
   .sidebar {
-    transform: translateX(-100%);
+    transform: translate(-100%);
+
     position: fixed;
     z-index: 999;
   }
