--- a/yt-clone/src/components/categoriesBar/_categoriesBar.scss
+++ b/yt-clone/src/components/categoriesBar/_categoriesBar.scss
@@ -18,5 +18,16 @@
 
     white-space: nowrap;
     border: 1.5px solid $text-color;
+    border-radius: 999px;
+
+    &:hover {
+      background-color: #374a59;
+    }
+
+    &.active {
+      color: #fff;
+      background-color: #606060;
+      border-color: $border-color;
+    }
   }
 }
