--- a/youtube-clone-react-redux/src/_base.scss
+++ b/youtube-clone-react-redux/src/_base.scss
@@ -9,6 +9,17 @@ $border-color: #4c4c4c;
 $breakpoint-medium: 1224px;
 $breakpoint-small: 520px;
 
+
+play-button {
+         padding: 0.5rem;
+         border: none;
+         border-radius: 5px;
+         margin-bottom: 1rem;
+         &:focus {
+            outline: none;
+         }
+      }
+
 * {
    margin: 0;
    padding: 0;
