--- a/youtube-clone-react-redux/src/components/playListsDir/Playlist.css
+++ b/youtube-clone-react-redux/src/components/playListsDir/Playlist.css
@@ -129,6 +129,11 @@ img.rounded-circle {
 	margin-bottom: 60px;
 }
 
+
+play-button {
+   color: red;
+      }
+
 .play-pause{
 	color: deeppink;
 }
